WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285789
[Intelligence Effects] Remaining text doesn't shift down after proofreading if the line count changes
https://bugs.webkit.org/show_bug.cgi?id=285789
Summary
[Intelligence Effects] Remaining text doesn't shift down after proofreading i...
Richard Robinson
Reported
2025-01-10 17:02:30 PST
rdar://142712429
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2025-01-10 17:04:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38885
EWS
Comment 2
2025-01-12 17:07:07 PST
Committed
288781@main
(1615acbb1268): <
https://commits.webkit.org/288781@main
> Reviewed commits have been landed. Closing PR #38885 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug