[Intelligence Effects] Remaining text doesn't shift down after proofreading if the line count changes https://bugs.webkit.org/show_bug.cgi?id=285789 rdar://142712429

Reviewed by Wenson Hsieh.

If a Proofreading operation involves multiple "chunks", the remaining text after each subsequent replacement
needs to be shifted vertically while the replacement animation is ongoing.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView intelligenceTextEffectCoordinator:contentPreviewForRange:completion:]):
* Source/WebKit/WebKitSwift/WritingTools/PlatformIntelligenceTextEffectView.swift:
(PlatformIntelligenceTextEffectViewSource.textPreview(for:)):
(PlatformIntelligenceTextEffectViewSource.performReplacementAndGeneratePreview(for:effect:animation:remainder:)):
(WTTextPreviewAsyncSourceAdapter.textPreview(for:)):
(Previews.heightDelta):
(PlatformIntelligenceTextEffectViewSource.performReplacementAndGeneratePreview(for:effect:animation:)): Deleted.
* Source/WebKit/WebKitSwift/WritingTools/WKIntelligenceTextEffectCoordinator.h:
* Source/WebKit/WebKitSwift/WritingTools/WKIntelligenceTextEffectCoordinator.swift:
(requestReplacement(withProcessedRange:finished:characterDelta:operation:)):
(startReplacementAnimation(using:)):
(WKIntelligenceTextEffectCoordinator.textPreview(for:)):
(WKIntelligenceTextEffectCoordinator.performReplacementAndGeneratePreview(for:effect:animation:remainder:)):
(WKIntelligenceTextEffectCoordinator.replacementEffectWillBegin(_:)):
(platformTextPreview(from:)):
(WKIntelligenceTextEffectCoordinator.performReplacementAndGeneratePreview(for:effect:animation:)): Deleted.

Canonical link: https://commits.webkit.org/288781@main